# iron_pi

./: .gitignore  Cargo.toml  README.md
benches/: bench.rs
src/: bsplit.rs  fact.rs  lib.rs  main.rs  util.rs
