[package]
name = "iron_pi"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
criterion = { version = "0.6.0", features = ["real_blackbox", "html_reports"] }
rayon = "1.10.0"
rug = { version = "1.27.0", features = ["serde", "gmp-mpfr-sys"] }
gmp-mpfr-sys = { version = "1.6.5" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
debug = false
debug-assertions = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
strip = true
debug = false
debug-assertions = false

[profile.profile]
inherits = "release"
debug = true
strip = false

[[bench]]
name = "bench"
harness = false
