[package]
name = "iron_pi"
version = "0.1.0"
edition = "2021"

[features]
default = ["gmp-mpfr-sys"]
custom-cflags = ["flint3-sys/custom-cflags"]
force-bindgen = ["flint3-sys/force-bindgen"]
gmp-mpfr-sys = ["flint3-sys/gmp-mpfr-sys"]

[dependencies]

clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
criterion = { version = "0.6.0", features = ["real_blackbox", "html_reports"] }
rayon = "1.10.0"
flint3-sys = { git = "https://github.com/Pencilcaseman/flint3-sys", branch = "tmp" }

[profile.release]
panic = "abort"
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
debug = false
debug-assertions = false

[profile.release.package."*"]
codegen-units = 1
opt-level = 3
strip = true
debug = false
debug-assertions = false

[profile.profile]
inherits = "release"
debug = true
strip = false

[[bench]]
name = "bench"
harness = false
